src/test/deca/syntax/valid/SansObjet/ListDeclVar-2DeclVar-NoInit.deca
// Description:
//    Declaration of two variables without initialization.
//
// Results:
//    (void)
//
// Historique:
//    cree le 01/01/2022

{
        int x, y;
}
